# amr_warehouse_navigation

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
amr_warehouse_sim/: __init__.py  agent_node.py  detector_node.py
config/: agent_params.yaml  detector_params.yaml  nav2_params.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  todo.md  troubleshooting.md
launch/: agent.launch.py  auto_nav.py  bringup.launch.py  diagnosis.launch.py  perception.launch.py  simulation.launch.py  start_all.launch.py  task_system.launch.py
models/: my_robot.sdf
scripts/: cad_to_map.py  check_robot.sh  run_docker.sh  run_sim.sh  send_task.sh  setup.sh  start_amr.sh  stop_amr.sh
task_manager/: wms_dispatcher.py
worlds/: narrow_aisle.world  warehouse_full.world
