<?xml version="1.0"?>
<package format="3">
  <name>amr_warehouse_sim</name>
  <version>0.0.1</version>
  <description>AMR warehouse simulation</description>
  <maintainer email="ina@example.com">ina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>